--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 Img {border: white solid 2px;
-    width: 150px;}
+    width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;}
 
 
 
@@ -22,8 +25,11 @@ Img {border: white solid 2px;
     .DivCountry{
         width: 200px; height: 250px; 
         margin: 16px;
-        font-family: 'Quicksand', sans-serif;        block-size: auto; 
-    overflow-x: auto;   }
+        font-family: 'Quicksand', sans-serif;    
+            block-size: auto; 
+            /* text-align: center; */
+
+      }
 
         input {font-size: larger;
             font-family: 'Quicksand', sans-serif;        }
